--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,39 @@
+
 @import "tailwindcss";
 
+
+
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #dba144;
+  --foreground:#1a1515;
 }
 
-/* @theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+.yellow{
+  background-color: var(--background);
+}
+.text-color{
+  color: var(--background);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+body{
+  color:var(--foreground);
+  cursor: pointer;
+}
+.btn{
+  cursor:pointer;;
+}
+.btn:hover{
+  transform: scale(1.15);
+}
+@keyframes fade-in-down {
+  from {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
   }
 }
 
-body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
-} */
+
